Fixed chunky horizontal scroll bar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,6 +9,7 @@
 
   ::-webkit-scrollbar {
     width: 6px;
+    height: 6px;
   }
   ::-webkit-scrollbar-track {
     background: #09090b;
